# mlflow_workflow_app

./: .env  .gitignore  README.md  Readme_venv.md  pyproject.toml
assets/: leuchtturm.html
cache/: cache.db  cache.db-shm  cache.db-wal
ci_docker/: Dockerfile
dashapp/: index.py
dashapp/app/: app.py
dashapp/app/assets/: 01_sidebar.css  02_cards.css  03_pagelayout.css  04_button.css  05_mycard_extra.css  06_accordion.css  accordion_script.js
dashapp/app/pages/: home.py  template.py
dashapp/app/pages/analysis/: analysis.py
dashapp/app/pages/dataload/: dataload.py
dashapp/app/pages/evaluation/: evaluation.py
dashapp/app/pages/landing/: landing.py
dashapp/app/pages/model/: model.py
dashapp/app/pages/preprocess/: preprocess.py
dashapp/app/pages/test_page1/: test_page1.py
dashapp/app/pages/test_page2/: test_page2.py
dashapp/app/pages/test_page3/: test_page3.py
dashapp/app/pages/validation/: validation.py
dashapp/app/tests/: basic_tests.py
dashapp/app/utilities/: api_call_clients.py  app_utils.py  cards.py  data_transformation.py  plots.py  sidebar_utils.py  spc.py
experimental/: Upath_blob_containments.py  advanced_plot.py  azure_accouts.py  blobstorage_access.py  data_spc_cleaning.py  data_spc_cleaning_automated.py  data_spc_transformation.py  data_transform.py  filesystem_upath.py  mlflow_workflow.py  mlflow_workflow_used.py  pandas.py  pyarrow_dataset_scanner_filtre.py  pyarrow_load.py  resources.py  step_by_step_mlflow_functionality.py  writing_dataset_arrow.py
experimental/additional_plots/: validation.py
experimental/data_load/: ploars_use.py
experimental/mflow_workflow/: hot_to_train_pipeline.py  how_to_train.py  how_to_use.py  how_to_use2.py  how_to_use_mlflowclass.py
experimental/plotting/: pygal_plotting.py
